syntax = "proto3";
option go_package = "github.com/ahdai0718/oh-my-go-eth/internal/pkg/pb";
package pb;

message Block {
    int64 block_num = 1;
    string block_hash = 2;
    int64 block_time = 3;
    string parent_hash = 4;
    bool is_stable = 5;
    repeated Transaction transactions = 6;
}

message Transaction {
    string tx_hash = 1;
    string block_hash = 2;
    string from = 3;
    string to = 4;
    int64 nonce = 5;
    string data = 6;
    string value = 7;
    repeated TransactionLog logs = 8;
}

message TransactionLog {
    int64 index = 1;
    string tx_hash = 2;
    string data = 3;
    int64 tx_index = 4;
}